--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.27",
     "nativewind": "^4.2.1",
     "react": "19.0.0",
     "react-native": "0.79.0",
